Add site favicon icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Replace with a pen SVG icon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3E%3Cpath d='M12.146 0.854l2 2a.5.5 0 0 1 0 .707l-8 8a.5.5 0 0 1-.207.137l-3.623.966a.5.5 0 0 1-.608-.608l.966-3.623a.5.5 0 0 1 .137-.207l8-8a.5.5 0 0 1 .707 0zM11 2.707L13.293 5l-3.5 3.5L7.5 6.207 11 2.707z'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paper - Stationary Shop</title>
   </head>
